--- a/Rosal_Escaño_grade8_library_NB.ipynb
+++ b/Rosal_Escaño_grade8_library_NB.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfUTkGrJLg03reJND/9bQo",
+      "authorship_tag": "ABX9TyMhDWppj3YsWMjSJz58s7iC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,43 +33,23 @@
         "import json\n",
         "url = \"https://raw.githubusercontent.com/KaelynDEscano/Rosal-Esca-o-grade8-library-Repo/refs/heads/main/books.json.txt\"\n",
         "response = requests.get(url)\n",
-        "books_data = response.json()\n",
-        "\n",
-        "total_library_books = 0\n",
-        "print(\"--- Library Book Details ---\")\n",
-        "for book in books_data['books']:\n",
-        "    title = book.get('title', 'N/A')\n",
-        "    available_copies = book.get('details', {}).get('available', 0)\n",
-        "    total_copies = book.get('details', {}).get('copies', 0)\n",
-        "\n",
-        "    print(f\"Title: {title}\")\n",
-        "    print(f\"Available: {available_copies}\")\n",
-        "    total_library_books += total_copies\n",
-        "print(\"----------------------------\")\n",
-        "print(f\"Total number of books in the library: {total_library_books}\")\n"
+        "books = response.json()\n",
+        "print(books)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MIOX1dAZLnru",
-        "outputId": "6f276dfe-4fd8-47ae-fc43-cdff64ed7472"
+        "outputId": "02e6a072-ca8c-43ea-eb35-528de7218094"
       },
-      "execution_count": 48,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Library Book Details ---\n",
-            "Title: Introduction to Python\n",
-            "Available: 3\n",
-            "Title: Data Structures Basics\n",
-            "Available: 2\n",
-            "Title: Web Development Essentials\n",
-            "Available: 6\n",
-            "----------------------------\n",
-            "Total number of books in the library: 15\n"
+            "{'books': [{'id': 2001, 'title': 'Introduction to Python', 'author': 'Juan Dela Cruz', 'details': {'copies': 5, 'available': 3}}, {'id': 2002, 'title': 'Data Structures Basics', 'author': 'Maria Santos', 'details': {'copies': 4, 'available': 2}}, {'id': 2003, 'title': 'Web Development Essentials', 'author': 'Carlos Reyes', 'details': {'copies': 6, 'available': 6}}]}\n"
           ]
         }
       ]
@@ -157,9 +137,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NmEWGvvqMY8S",
-        "outputId": "c7d757e2-f86e-42a0-9e9d-00053b3d2e03"
+        "outputId": "b44427fe-7c2d-4c26-acf4-86abd5d66bb6"
       },
-      "execution_count": 46,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +167,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qqfMOGutNn-i",
-        "outputId": "fc7ecabe-84ad-4a19-85b1-a5f54ab97e47"
+        "outputId": "2bfd2be5-a77b-478f-b78a-860fb065ffca"
       },
-      "execution_count": 29,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,9 +193,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lq-wlJ7xOO8s",
-        "outputId": "4f552650-40ef-4163-ba68-abfd23e3d10f"
+        "outputId": "d86fb50d-20f5-4246-c495-66043c7489c8"
       },
-      "execution_count": 30,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,17 +209,17 @@
     {
       "cell_type": "code",
       "source": [
-        "for books_id, info in books_data.items():\n",
-        " print(info[\"title\"])"
+        "for book in books_data.values():\n",
+        " print(book['title'])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Ptra7MfjOfTj",
-        "outputId": "7153b98b-da39-4714-e8ce-60c47ccf7718"
+        "outputId": "a971fcb4-494f-4609-9c7d-51d2a2584919",
+        "id": "tovb1QVOeqCj"
       },
-      "execution_count": 37,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,10 +246,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9fac6427-bf48-4d86-9a6b-601477d82bee",
+        "outputId": "d633e72a-284d-420c-a8c1-80bf02bedc04",
         "id": "6aqueDWLYOHr"
       },
-      "execution_count": 68,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
